--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <article>
-            <h4 class="aligncenter">Preset</h4>
+            <h4 class="aligncenter">DB Entities</h4>
             <dl>
                 <dt>Properties</dt>
                 <dd>
