--- a/townships.html
+++ b/townships.html
@@ -1,1 +1,40 @@
 
+
+<!DOCTYPE html>
+<html>
+<head>
+
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="main.css" media="screen">
+    <script src="index.js" charset="utf-8" defer></script>
+</head>
+<body>
+    <header>
+
+        <nav class="navbar radius boxshadow">
+            <ul class="navlist">
+                <li class="circle navitem"><a class="circle" href="#">Properties</a></li>
+                <li class="circle navitem"><a class="circle" href="#">Rentals</a></li>
+                <li class="circle navitem"><a class="circle" href="#">Sellers</a></li>
+                <li class="circle navitem"><a class="circle" href="#">Townships</a></li>
+                <li class="circle navitem"><a class="circle" href="#">CompProRent</a></li>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h4 class="aligncenter">Townships</h4>
+            <dl>
+                <dt>Properties</dt>
+                <dt>Rentals</dt>
+                <dt>Sellers</dt>
+                <dt>Townships</dt>
+                <dt>CompProRent</dt>
+            </dl>
+        </article>
+    </main>
+    <body>
+
+
+</html>
