--- a/properties.html
+++ b/properties.html
@@ -26,10 +26,7 @@
             <h4 class="aligncenter">Properties</h4>
             <dl>
                 <dt>Properties</dt>
-                <dt>Rentals</dt>
-                <dt>Sellers</dt>
-                <dt>Townships</dt>
-                <dt>CompProRent</dt>
+                <input type="text" id="propID" name="propID"> 
             </dl>
         </article>
     </main>
