--- a/properties.html
+++ b/properties.html
@@ -25,8 +25,10 @@
         <article>
             <h4 class="aligncenter">Properties</h4>
             <dl>
-                <dt>Properties</dt>
-                <input type="text" id="propID" name="propID"> 
+                <form>
+                    <label for="propID">Properties</label>
+                    <input type="text" id="propID" name="propID"> 
+                </form>
             </dl>
         </article>
     </main>
