--- a/rentals.html
+++ b/rentals.html
@@ -25,11 +25,10 @@
         <article>
             <h4 class="aligncenter">Rentals</h4>
             <dl>
-                <dt>Properties</dt>
-                <dt>Rentals</dt>
-                <dt>Sellers</dt>
-                <dt>Townships</dt>
-                <dt>CompProRent</dt>
+               <form>
+                    <label for="rentID">Rentals</label>
+                    <input type="text" id="rentID" name="rentID"> 
+                </form>
             </dl>
         </article>
     </main>
