--- a/sellers.html
+++ b/sellers.html
@@ -26,11 +26,10 @@
         <article>
             <h4 class="aligncenter">Sellers</h4>
             <dl>
-                <dt>Properties</dt>
-                <dt>Rentals</dt>
-                <dt>Sellers</dt>
-                <dt>Townships</dt>
-                <dt>CompProRent</dt>
+               <form>
+                    <label for="sellID">Sellers</label>
+                    <input type="text" id="sellID" name="sellID"> 
+                </form>
             </dl>
         </article>
     </main>
