--- a/townships.html
+++ b/townships.html
@@ -26,11 +26,10 @@
         <article>
             <h4 class="aligncenter">Townships</h4>
             <dl>
-                <dt>Properties</dt>
-                <dt>Rentals</dt>
-                <dt>Sellers</dt>
-                <dt>Townships</dt>
-                <dt>CompProRent</dt>
+               <form>
+                    <label for="townID">Townships</label>
+                    <input type="text" id="townID" name="townID"> 
+                </form>
             </dl>
         </article>
     </main>
