--- a/compprorent.html
+++ b/compprorent.html
@@ -26,11 +26,10 @@
         <article>
             <h4 class="aligncenter">CompProRent</h4>
             <dl>
-                <dt>Properties</dt>
-                <dt>Rentals</dt>
-                <dt>Sellers</dt>
-                <dt>Townships</dt>
-                <dt>CompProRent</dt>
+               <form>
+                    <label for="cprID">CompPropRent</label>
+                    <input type="text" id="cprID" name="cprID"> 
+                </form>
             </dl>
         </article>
     </main>
