--- a/properties.html
+++ b/properties.html
@@ -24,10 +24,13 @@
     <main>
         <article>
             <h4 class="aligncenter">Properties</h4>
+            <h5>This page will contain a table of all the properties and its editable attributes as well as some pictures</h5>
             <dl>
                 <form>
-                    <label for="propID">Properties</label>
-                    <input type="text" id="propID" name="propID"> 
+                    <label for="propID">Properties Attribute</label>
+                    <input type="text" id="propID" name="propID">
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                 </form>
             </dl>
         </article>
