--- a/rentals.html
+++ b/rentals.html
@@ -24,10 +24,13 @@
     <main>
         <article>
             <h4 class="aligncenter">Rentals</h4>
+            <h5>This page will contain a table of all the rentals and its editable attributes as well as some pictures</h5>
             <dl>
                <form>
                     <label for="rentID">Rentals</label>
                     <input type="text" id="rentID" name="rentID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                 </form>
             </dl>
         </article>
