--- a/properties.html
+++ b/properties.html
@@ -31,6 +31,16 @@
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                    
+                                        <label for="propID">Properties Attribute</label>
+                    <input type="text" id="propID" name="propID">
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                    
+                                        <label for="propID">Properties Attribute</label>
+                    <input type="text" id="propID" name="propID">
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                 </form>
             </dl>
         </article>
