--- a/rentals.html
+++ b/rentals.html
@@ -27,7 +27,17 @@
             <h5>This page will contain a table of all the rentals and its editable attributes as well as some pictures</h5>
             <dl>
                <form>
-                    <label for="rentID">Rentals</label>
+                    <label for="rentID">Rentals Attribute</label>
+                    <input type="text" id="rentID" name="rentID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                   
+                    <label for="rentID">Rentals Attribute</label>
+                    <input type="text" id="rentID" name="rentID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                   
+                     <label for="rentID">Rentals Attribute</label>
                     <input type="text" id="rentID" name="rentID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
