--- a/sellers.html
+++ b/sellers.html
@@ -25,10 +25,18 @@
     <main>
         <article>
             <h4 class="aligncenter">Sellers</h4>
+            <h5>Will contain different attributes for sellers such as first name and last name</h5>
             <dl>
                <form>
-                    <label for="sellID">Sellers</label>
+                    <label for="sellID">Sellers Attribute</label>
                     <input type="text" id="sellID" name="sellID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                   
+                    <label for="sellID">Sellers Attribute</label>
+                    <input type="text" id="sellID" name="sellID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                 </form>
             </dl>
         </article>
