--- a/properties.html
+++ b/properties.html
@@ -12,11 +12,11 @@
 
         <nav class="navbar radius boxshadow">
             <ul class="navlist">
-                <li class="circle navitem"><a class="circle" href="#">Properties</a></li>
-                <li class="circle navitem"><a class="circle" href="#">Rentals</a></li>
-                <li class="circle navitem"><a class="circle" href="#">Sellers</a></li>
-                <li class="circle navitem"><a class="circle" href="#">Townships</a></li>
-                <li class="circle navitem"><a class="circle" href="#">CompProRent</a></li>
+                <li class="circle navitem"><a class="circle" href="properties.html">Properties</a></li>
+                <li class="circle navitem"><a class="circle" href="rentals.html">Rentals</a></li>
+                <li class="circle navitem"><a class="circle" href="sellers.html">Sellers</a></li>
+                <li class="circle navitem"><a class="circle" href="townships.html">Townships</a></li>
+                <li class="circle navitem"><a class="circle" href="compprorent.html">CompProRent</a></li>>
                 </li>
             </ul>
         </nav>
