--- a/townships.html
+++ b/townships.html
@@ -25,10 +25,22 @@
     <main>
         <article>
             <h4 class="aligncenter">Townships</h4>
+            <h5>This page will contain Township and its editable attributes as well as certain images to depict townships</h5>
             <dl>
                <form>
-                    <label for="townID">Townships</label>
+                    <label for="townID">Townships Attribute</label>
                     <input type="text" id="townID" name="townID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>> 
+                   
+                    <label for="townID">Townships Attribute</label>
+                    <input type="text" id="townID" name="townID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>> 
+                   
+                   <label for="townID">Search</label>
+                    <input type="text" id="townID" name="townID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Enter</button> 
                 </form>
             </dl>
         </article>
