--- a/compprorent.html
+++ b/compprorent.html
@@ -24,10 +24,12 @@
     <main>
         <article>
             <h4 class="aligncenter">CompProRent</h4>
+            <h5>This page will allow the comparison of different properties vs rentals</h5>
             <dl>
                <form>
-                    <label for="cprID">CompPropRent</label>
+                    <label for="cprID">CompPropRent Attribute</label>
                     <input type="text" id="cprID" name="cprID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Compare</button>
                 </form>
             </dl>
         </article>
