--- a/properties.html
+++ b/properties.html
@@ -32,15 +32,14 @@
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                     
-                                        <label for="propID">Properties Attribute</label>
+                     <label for="propID">Properties Attribute</label>
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                     
-                                        <label for="propID">Properties Attribute</label>
-                    <input type="text" id="propID" name="propID">
-                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
-                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                   <label for="propID">Search</label>
+                    <input type="text" id="propID" name="propID"> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Enter</button
                 </form>
             </dl>
         </article>
