--- a/rentals.html
+++ b/rentals.html
@@ -37,10 +37,9 @@
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                    
-                     <label for="rentID">Rentals Attribute</label>
+                   <label for="rentID">Search</label>
                     <input type="text" id="rentID" name="rentID"> 
-                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
-                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Enter</button
                 </form>
             </dl>
         </article>
