--- a/sellers.html
+++ b/sellers.html
@@ -33,10 +33,9 @@
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
                    
-                    <label for="sellID">Sellers Attribute</label>
+                   <label for="sellID">Search</label>
                     <input type="text" id="sellID" name="sellID"> 
-                    <button type="button" onclick="alert('Not yet implemented!')">Add</button>
-                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
+                    <button type="button" onclick="alert('Not yet implemented!')">Enter</button
                 </form>
             </dl>
         </article>
