--- a/townships.html
+++ b/townships.html
@@ -31,12 +31,12 @@
                     <label for="townID">Townships Attribute</label>
                     <input type="text" id="townID" name="townID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
-                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button> 
                    
                     <label for="townID">Townships Attribute</label>
                     <input type="text" id="townID" name="townID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
-                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button>> 
+                    <button type="button" onclick="alert('Not yet implemented!')">Delete</button> 
                    
                    <label for="townID">Search</label>
                     <input type="text" id="townID" name="townID"> 
