--- a/properties.html
+++ b/properties.html
@@ -43,6 +43,43 @@
                 </form>
             </dl>
         </article>
+         <article>
+            <h4 class="aligncenter">Properties Data</h4>
+            <dl>
+                <table>
+                   <tr>
+                       <th>ID</th>
+                       <th>askingPrice</th>
+                       <th>streetAddress</th>
+                       <th>city</th>
+                       <th>state</th>
+                       <th>zip</th>
+                       <th>township</th>
+                       <th>squareFootage</th>
+                       <th>lotSize</th>
+                       <th>bedrooms</th>
+                       <th>bathrooms</th>
+                       <th>pool</th>
+                       <th>seller</th>
+                   </tr>
+                   <tr>
+                       <th>1</th>
+                       <th>2000</th>
+                       <th>1000 NE Cool St.</th>
+                       <th>CoolCity</th>
+                       <th>Oregon</th>
+                       <th>97333</th>
+                       <th>Township1</th>
+                       <th>1700</th>
+                       <th>1800</th>
+                       <th>5</th>
+                       <th>4</th>
+                       <th>Yes</th>
+                       <th>Bruce Banner</th>
+                   </tr>
+                </table>
+            </dl>
+        </article>
     </main>
     <body>
 
