--- a/properties.html
+++ b/properties.html
@@ -26,6 +26,7 @@
             <h4 class="aligncenter">Properties</h4>
             <h5>This page will contain a table of all the properties and its editable attributes as well as some pictures</h5>
             <dl>
+                <div class "column">
                 <form>
                     <label for="propID">Properties Attribute</label>
                     <input type="text" id="propID" name="propID">
@@ -41,6 +42,7 @@
                     <input type="text" id="propID" name="propID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Enter</button
                 </form>
+                </div>
             </dl>
         </article>
          <article>
