--- a/sellers.html
+++ b/sellers.html
@@ -39,6 +39,27 @@
                 </form>
             </dl>
         </article>
+         <article>
+            <h4 class="aligncenter">Properties Data</h4>
+            <dl>
+                <table>
+                   <tr>
+                       <th>ID</th>
+                       <th>firstName</th>
+                       <th>lastName</th>
+                       <th>phoneNumber</th>
+                       <th>email</th>
+                   </tr>
+                   <tr>
+                       <th>1</th>
+                       <th>Bruce</th>
+                       <th>Banner</th>
+                       <th>1234567890</th>
+                       <th>GreenMan@email.com</th>
+                   </tr>
+                </table>
+            </dl>
+        </article>
     </main>
     <body>
 
