--- a/sellers.html
+++ b/sellers.html
@@ -40,7 +40,7 @@
             </dl>
         </article>
          <article>
-            <h4 class="aligncenter">Properties Data</h4>
+            <h4 class="aligncenter">Seller Data</h4>
             <dl>
                 <table>
                    <tr>
