--- a/properties.html
+++ b/properties.html
@@ -33,12 +33,14 @@
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
-                    
+                    </div>
+                    <div class="column">
                     <label for="propID">Properties Attribute</label>
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
-                    
+                    </div>
+                    <div class="column">
                     <label for="propID">Search</label>
                     <input type="text" id="propID" name="propID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Enter</button
