--- a/properties.html
+++ b/properties.html
@@ -25,28 +25,20 @@
         <article>
             <h4 class="aligncenter">Properties</h4>
             <h5>This page will contain a table of all the properties and its editable attributes as well as some pictures</h5>
-            <dl>
-               
-                <form>
-                    <div class="column">
+            <dl> 
+                <fieldset>
                     <label for="propID">Properties Attribute</label>
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
-                    </div>
-                    <div class="column">
                     <label for="propID">Properties Attribute</label>
                     <input type="text" id="propID" name="propID">
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
                     <button type="button" onclick="alert('Not yet implemented!')">Delete</button>
-                    </div>
-                    <div class="column">
                     <label for="propID">Search</label>
                     <input type="text" id="propID" name="propID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Enter</button
-                    </div>
-                </form>
-                
+                </fieldset>
             </dl>
         </article>
          <article>
