--- a/townships.html
+++ b/townships.html
@@ -44,6 +44,29 @@
                 </form>
             </dl>
         </article>
+        <article>
+            <h4 class="aligncenter">Township Data</h4>
+            <dl>
+                <table>
+                   <tr>
+                       <th>ID</th>
+                       <th>cityName</th>
+                       <th>stateName</th>
+                       <th>hoaFee</th>
+                       <th>propertyTaxRate</th>
+                       <th>avgSchoolRating</th>
+                   </tr>
+                   <tr>
+                       <th>1</th>
+                       <th>CoolCity</th>
+                       <th>Oregon</th>
+                       <th>90</th>
+                       <th>5%</th>
+                       <th>4.7</th>
+                   </tr>
+                </table>
+            </dl>
+        </article>
     </main>
     <body>
 
