--- a/compprorent.html
+++ b/compprorent.html
@@ -33,6 +33,21 @@
                 </form>
             </dl>
         </article>
+         <article>
+            <h4 class="aligncenter">Seller Data</h4>
+            <dl>
+                <table>
+                   <tr>
+                       <th>propertyID</th>
+                       <th>sellerID</th>
+                   </tr>
+                   <tr>
+                       <th>1</th>
+                       <th>2</th>
+                   </tr>
+                </table>
+            </dl>
+        </article>
     </main>
     <body>
 
