--- a/properties.html
+++ b/properties.html
@@ -111,22 +111,24 @@
                    </tr>
                 </table>
               <div class="dropdown">
-                  <button class="dropbtn">Update</button>
+              <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
-                  <a href="#">ID</a>
-                  <a href="#">Asking Price</a>
-                  <a href="#">Street Address</a>
-                  <a href="#">City</a>
-                  <a href="#">State</a>
-                  <a href="#">Zip</a>
-                  <a href="#">Township</a>
-                  <a href="#">Square Footage</a>
-                  <a href="#">Lot Size</a>
-                  <a href="#">Bedroom</a>
-                  <a href="#">Bathroom</a>
-                  <a href="#">Pool</a>
-                  <a href="#">Seller</a>   
+                      <a href="#">ID</a>
+                      <a href="#">Asking Price</a>
+                      <a href="#">Street Address</a>
+                      <a href="#">City</a>
+                      <a href="#">State</a>
+                      <a href="#">Zip</a>
+                      <a href="#">Township</a>
+                      <a href="#">Square Footage</a>
+                      <a href="#">Lot Size</a>
+                      <a href="#">Bedroom</a>
+                      <a href="#">Bathroom</a>
+                      <a href="#">Pool</a>
+                      <a href="#">Seller</a> 
+                  </div>
               </div>
+                  
             </dl>
         </article>
     </main>
