--- a/properties.html
+++ b/properties.html
@@ -74,6 +74,7 @@
         </article>
          <article>
             <h4 class="aligncenter">Properties Data</h4>
+            <h5 class="aligncenter">Hover "Update" to see elements</h5>
             <dl>
                 <table>
                    <tr>
