--- a/rentals.html
+++ b/rentals.html
@@ -45,6 +45,7 @@
         </article>
          <article>
             <h4 class="aligncenter">Rental Data</h4>
+            <h5 class="aligncenter">Hover "Update" to see elements</h5>
             <dl>
                 <table>
                    <tr>
