--- a/sellers.html
+++ b/sellers.html
@@ -41,6 +41,7 @@
         </article>
          <article>
             <h4 class="aligncenter">Seller Data</h4>
+            <h5 class="aligncenter">Hover "Update" to see elements</h5>
             <dl>
                 <table>
                    <tr>
