--- a/compprorent.html
+++ b/compprorent.html
@@ -34,7 +34,8 @@
             </dl>
         </article>
          <article>
-            <h4 class="aligncenter">Seller Data</h4>
+            <h4 class="aligncenter">Property Vs Rentals</h4>
+            <h5 class="aligncenter">Hover "Update" to see elements</h5>
             <dl>
                 <table>
                    <tr>
