--- a/properties.html
+++ b/properties.html
@@ -27,7 +27,7 @@
             <h5>This page will contain a table of all the properties and its editable attributes as well as some pictures</h5>
             <dl> 
                 <form>
-                <fieldset class = "column">
+                <fieldset>
                     <label for="propID">ID:</label>
                     <input type="text" id="propID" name="propID"><br><br>
                     
