--- a/sellers.html
+++ b/sellers.html
@@ -28,6 +28,7 @@
             <h5>Will contain different attributes for sellers such as first name and last name</h5>
             <dl>
                <form>
+               <fieldset>
                     <label for="sellID">Sellers Attribute</label>
                     <input type="text" id="sellID" name="sellID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
@@ -36,6 +37,7 @@
                    <label for="sellID">Search</label>
                     <input type="text" id="sellID" name="sellID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Enter</button
+                 </fieldset>
                 </form>
             </dl>
         </article>
@@ -59,6 +61,16 @@
                        <th>GreenMan@email.com</th>
                    </tr>
                 </table>
+                <div class="dropdown">
+              <button class="dropbtn">Update</button>
+                  <div class="dropdown-content">
+                      <a href="#">ID</a>
+                      <a href="#">First Name:</a>
+                      <a href="#">Last Name:</a>
+                      <a href="#">Phone Number:</a>
+                      <a href="#">Email:</a>
+                  </div>
+              </div>
             </dl>
         </article>
     </main>
