--- a/townships.html
+++ b/townships.html
@@ -28,6 +28,7 @@
             <h5>This page will contain Township and its editable attributes as well as certain images to depict townships</h5>
             <dl>
                <form>
+               <fieldset>
                     <label for="townID">Townships Attribute</label>
                     <input type="text" id="townID" name="townID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Add</button>
@@ -41,6 +42,7 @@
                    <label for="townID">Search</label>
                     <input type="text" id="townID" name="townID"> 
                     <button type="button" onclick="alert('Not yet implemented!')">Enter</button> 
+                 <fieldset>
                 </form>
             </dl>
         </article>
@@ -66,6 +68,17 @@
                        <th>4.7</th>
                    </tr>
                 </table>
+              <div class="dropdown">
+              <button class="dropbtn">Update</button>
+                  <div class="dropdown-content">
+                      <a href="#">ID</a>
+                      <a href="#">City Name</a>
+                      <a href="#">State Name</a>
+                      <a href="#">HOA Fee</a>
+                      <a href="#">Propert Tax Rate</a>
+                      <a href="#">AVG School Rating</a>
+                  </div>
+               </div>
             </dl>
         </article>
     </main>
