--- a/sellers.html
+++ b/sellers.html
@@ -35,7 +35,7 @@
                     <label for="sellID">First Name:</label>
                     <input type="text" id="sellID" name="sellID"> <br><br>
                    
-                    <label for="propID">Last Name::</label>
+                    <label for="propID">Last Name:</label>
                     <input type="text" id="propID" name="propID"><br><br>
                    
                     <label for="propID">Phone Number:</label>
@@ -67,6 +67,13 @@
                        <th>Banner</th>
                        <th>1234567890</th>
                        <th>GreenMan@email.com</th>
+                   </tr>
+                   <tr>
+                       <th>2</th>
+                       <th>Thor</th>
+                       <th>Odinson</th>
+                       <th>7777777777</th>
+                       <th>NULL</th>
                    </tr>
                 </table>
                 <div class="dropdown">
