--- a/sellers.html
+++ b/sellers.html
@@ -76,7 +76,7 @@
                        <th>NULL</th>
                    </tr>
                 </table>
-                <div class="dropdown">
+                <div class="dropdown alightright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a href="#">ID</a>
@@ -85,6 +85,14 @@
                       <a href="#">Phone Number:</a>
                       <a href="#">Email:</a>
                   </div>
+               <div class="dropdown alightright">
+              <button class="dropbtn">Update</button>
+                  <div class="dropdown-content">
+                      <a href="#">ID</a>
+                      <a href="#">First Name:</a>
+                      <a href="#">Last Name:</a>
+                      <a href="#">Phone Number:</a>
+                      <a href="#">Email:</a>
               </div>
             </dl>
         </article>
