--- a/rentals.html
+++ b/rentals.html
@@ -12,6 +12,7 @@
 
         <nav class="navbar radius boxshadow">
             <ul class="navlist">
+                <li class="circle navitem"><a class="circle" href="index.html">Home</a></li>
                 <li class="circle navitem"><a class="circle" href="properties.html">Properties</a></li>
                 <li class="circle navitem"><a class="circle" href="rentals.html">Rentals</a></li>
                 <li class="circle navitem"><a class="circle" href="sellers.html">Sellers</a></li>
