--- a/sellers.html
+++ b/sellers.html
@@ -77,7 +77,7 @@
                        <th>NULL</th>
                    </tr>
                 </table>
-                <div class="dropdown alightright">
+                <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a href="#">ID</a>
@@ -86,7 +86,7 @@
                       <a href="#">Phone Number:</a>
                       <a href="#">Email:</a>
                   </div>
-               <div class="dropdown alightright">
+               <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a href="#">ID</a>
