--- a/properties.html
+++ b/properties.html
@@ -112,7 +112,7 @@
               <div class="dropdown">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
-                      <a href="#">ID</a>
+                      <a onclick="prompt('Enter ID')" href="#">ID</a>
                       <a href="#">Asking Price</a>
                       <a href="#">Street Address</a>
                       <a href="#">City</a>
