--- a/sellers.html
+++ b/sellers.html
@@ -78,13 +78,14 @@
                    </tr>
                 </table>
                 <div class="dropdown alignright">
-              <button class="dropbtn">Update</button>
+                <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a href="#">ID</a>
                       <a href="#">First Name:</a>
                       <a href="#">Last Name:</a>
                       <a href="#">Phone Number:</a>
                       <a href="#">Email:</a>
+                      </div>
                   </div>
             </dl>
         </article>
