--- a/rentals.html
+++ b/rentals.html
@@ -107,18 +107,18 @@
               <div class="dropdown">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
-                      <a href="#">ID</a>
-                      <a href="#">Asking Price</a>
-                      <a href="#">Street Address</a>
-                      <a href="#">City</a>
-                      <a href="#">State</a>
-                      <a href="#">Zip</a>
-                      <a href="#">Township</a>
-                      <a href="#">Square Footage</a>
-                      <a href="#">Lot Size</a>
-                      <a href="#">Bedroom</a>
-                      <a href="#">Bathroom</a>
-                      <a href="#">Pool</a>
+                      <a onclick="prompt('Enter New ID')" href="#">ID</a>
+                      <a onclick="prompt('Enter New Asking Price')" href="#">Asking Price</a>
+                      <a onclick="prompt('Enter New Street Address')" href="#">Street Address</a>
+                      <a onclick="prompt('Enter New City')" href="#">City</a>
+                      <a onclick="prompt('Enter New State')" href="#">State</a>
+                      <a onclick="prompt('Enter New Zip')" href="#">Zip</a>
+                      <a onclick="prompt('Enter New Township')" href="#">Township</a>
+                      <a onclick="prompt('Enter New Square Footage')" href="#">Square Footage</a>
+                      <a onclick="prompt('Enter New Lot Size')" href="#">Lot Size</a>
+                      <a onclick="prompt('Enter New Number of Bedrooms')" href="#">Bedroom</a>
+                      <a  onclick="prompt('Enter New Number of Bathrooms')" href="#">Bathroom</a>
+                      <a onclick="prompt('Enter Yes/No for Pool')" href="#">Pool</a>
                   </div>
               </div>
             </dl>
