--- a/sellers.html
+++ b/sellers.html
@@ -80,11 +80,11 @@
                 <div class="dropdown alignright">
                 <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
-                      <a href="#">ID</a>
-                      <a href="#">First Name:</a>
-                      <a href="#">Last Name:</a>
-                      <a href="#">Phone Number:</a>
-                      <a href="#">Email:</a>
+                      <a onclick="prompt('Enter New ID')" href="#">ID</a>
+                      <a onclick="prompt('Enter New First Name')" href="#">First Name:</a>
+                      <a onclick="prompt('Enter New Last Name')" href="#">Last Name:</a>
+                      <a onclick="prompt('Enter New Phone Number')" href="#">Phone Number:</a>
+                      <a onclick="prompt('Enter New Email')" href="#">Email:</a>
                       </div>
                   </div>
             </dl>
