--- a/townships.html
+++ b/townships.html
@@ -78,12 +78,12 @@
               <div class="dropdown">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
-                      <a href="#">ID</a>
-                      <a href="#">City Name</a>
-                      <a href="#">State Name</a>
-                      <a href="#">HOA Fee</a>
-                      <a href="#">Propert Tax Rate</a>
-                      <a href="#">AVG School Rating</a>
+                      <a onclick="prompt('New ID')" href="#">ID</a>
+                      <a onclick="prompt('New City')" href="#">City Name</a>
+                      <a onclick="prompt('Enter New State')" href="#">State Name</a>
+                      <a onclick="prompt('Enter New Fee')" href="#">HOA Fee</a>
+                      <a onclick="prompt('Enter New Rate')" href="#">Propert Tax Rate</a>
+                      <a onclick="prompt('Enter New Rating')" href="#">AVG School Rating</a>
                   </div>
                </div>
             </dl>
