--- a/compprorent.html
+++ b/compprorent.html
@@ -48,6 +48,13 @@
                        <th>2</th>
                    </tr>
                 </table>
+                <div class="dropdown">
+              <button class="dropbtn">Update</button>
+                  <div class="dropdown-content">
+                      <a onclick="prompt('Enter New Property to Compare')" href="#">Property ID</a>
+                      <a onclick="prompt('Enter New Rental to Compare')" href="#">Rental ID</a>
+                  </div>
+              </div>
             </dl>
         </article>
     </main>
