--- a/properties.html
+++ b/properties.html
@@ -109,7 +109,7 @@
                        <th>Bruce Banner</th>
                    </tr>
                 </table>
-              <div class="dropdown">
+              <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a onclick="prompt('Enter New ID')" href="#">ID</a>
