--- a/rentals.html
+++ b/rentals.html
@@ -104,7 +104,7 @@
                        <th>Yes</th>
                    </tr>
                 </table>
-              <div class="dropdown">
+              <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a onclick="prompt('Enter New ID')" href="#">ID</a>
