--- a/townships.html
+++ b/townships.html
@@ -75,7 +75,7 @@
                        <th>4.7</th>
                    </tr>
                 </table>
-              <div class="dropdown">
+              <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a onclick="prompt('New ID')" href="#">ID</a>
