--- a/compprorent.html
+++ b/compprorent.html
@@ -48,7 +48,7 @@
                        <th>2</th>
                    </tr>
                 </table>
-                <div class="dropdown">
+                <div class="dropdown alignright">
               <button class="dropbtn">Update</button>
                   <div class="dropdown-content">
                       <a onclick="prompt('Enter New Property to Compare')" href="#">Property ID</a>
